templates/go-app-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-svc
  namespace: default
  labels:
    name: go-app-svc
    app: go-app
    dns: route53
  annotations:
    # For type=LoadBalancer or type=NodePort only
    #dns.alpha.kubernetes.io/external: go-app.k8s-uk.encompasshost.com
spec:
  selector:
    app: go-app
  sessionAffinity: None
  type: ClusterIP 
  ports:
  - name: go-app
    port: 80
    protocol: TCP
    targetPort: 8081
